--- a/battleLinks.html
+++ b/battleLinks.html
@@ -17,7 +17,7 @@
         <p class="card-image"><img src="/assets/563854/tvboy_sq.jpg" alt="SOS. Street Art. Boy warms hands over fire." width="400" height="400"></p>
         <div class="card-body">
             <h2 class="card-title"><a class="card-link" href="/features/street-art-in-ukraine/">Street Art in Ukraine</a></h2>
-            <p>Art by TvBoy, research by Isabelle Wilson</p>
+            <p>Art by TVBoy, research by Isabelle Wilson</p>
         </div>
     </div>
 </div>
